--- a/eureka/cfg/config.yaml
+++ b/eureka/cfg/config.yaml
@@ -1,6 +1,6 @@
 defaults:
   - _self_
-  - env: shadow_hand
+  - env: cartpole
   - override hydra/launcher: local
   - override hydra/output: local
 
@@ -9,7 +9,7 @@ hydra:
     chdir: True
 
 # LLM parameters
-model: gpt-4-0314  # LLM model (other options are gpt-4, gpt-4-0613, gpt-3.5-turbo-16k-0613)
+model: gemma-7b-it  # LLM model (other options are gpt-4, gpt-4-0613, gpt-3.5-turbo-16k-0613)
 temperature: 1.0
 suffix: GPT  # suffix for generated files (indicates LLM model)
 
